@@ -18,27 +18,24 @@
  */
 package org.apache.polaris.service;
 
-import static org.apache.polaris.service.context.DefaultContextResolver.REALM_PROPERTY_KEY;
-import static org.apache.polaris.service.throttling.RequestThrottlingErrorResponse.RequestThrottlingErrorType.REQUEST_TOO_LARGE;
+import static org.apache.polaris.service.auth.BasePolarisAuthenticator.PRINCIPAL_ROLE_ALL;
+import static org.apache.polaris.service.context.DefaultRealmContextResolver.REALM_PROPERTY_KEY;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.spy;
 import static org.mockito.Mockito.when;
 
-import io.dropwizard.testing.ConfigOverride;
-import io.dropwizard.testing.ResourceHelpers;
-import io.dropwizard.testing.junit5.DropwizardAppExtension;
-import io.dropwizard.testing.junit5.DropwizardExtensionsSupport;
+import io.quarkus.test.junit.QuarkusTest;
+import jakarta.inject.Inject;
 import jakarta.ws.rs.ProcessingException;
 import jakarta.ws.rs.client.Entity;
 import jakarta.ws.rs.client.Invocation;
 import jakarta.ws.rs.core.Response;
 import java.io.IOException;
-import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.List;
 import java.util.Map;
-import org.apache.commons.io.FileUtils;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.iceberg.BaseTable;
 import org.apache.iceberg.PartitionData;
@@ -63,7 +60,6 @@ import org.apache.iceberg.rest.HTTPClient;
 import org.apache.iceberg.rest.RESTClient;
 import org.apache.iceberg.rest.RESTSessionCatalog;
 import org.apache.iceberg.rest.auth.AuthConfig;
-import org.apache.iceberg.rest.auth.ImmutableAuthConfig;
 import org.apache.iceberg.rest.auth.OAuth2Properties;
 import org.apache.iceberg.rest.auth.OAuth2Util;
 import org.apache.iceberg.types.Types;
@@ -79,12 +75,7 @@ import org.apache.polaris.core.admin.model.PrincipalRole;
 import org.apache.polaris.core.admin.model.StorageConfigInfo;
 import org.apache.polaris.core.entity.CatalogEntity;
 import org.apache.polaris.core.entity.PolarisEntityConstants;
-import org.apache.polaris.service.auth.BasePolarisAuthenticator;
-import org.apache.polaris.service.config.PolarisApplicationConfig;
-import org.apache.polaris.service.test.PolarisConnectionExtension;
-import org.apache.polaris.service.test.PolarisRealm;
-import org.apache.polaris.service.test.SnowmanCredentialsExtension;
-import org.apache.polaris.service.throttling.RequestThrottlingErrorResponse;
+import org.apache.polaris.service.test.PolarisIntegrationTestHelper;
 import org.assertj.core.api.Assertions;
 import org.assertj.core.api.InstanceOfAssertFactories;
 import org.junit.jupiter.api.AfterAll;
@@ -92,73 +83,50 @@ import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestInfo;
-import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.api.TestInstance;
+import org.junit.jupiter.api.io.TempDir;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.testcontainers.shaded.com.google.common.collect.ImmutableMap;
 
-@ExtendWith({
-  DropwizardExtensionsSupport.class,
-  PolarisConnectionExtension.class,
-  SnowmanCredentialsExtension.class
-})
+@QuarkusTest
+@TestInstance(TestInstance.Lifecycle.PER_CLASS)
 public class PolarisApplicationIntegrationTest {
+
   private static final Logger LOGGER =
       LoggerFactory.getLogger(PolarisApplicationIntegrationTest.class);
 
   public static final String PRINCIPAL_ROLE_NAME = "admin";
-  private static final DropwizardAppExtension<PolarisApplicationConfig> EXT =
-      new DropwizardAppExtension<>(
-          PolarisApplication.class,
-          ResourceHelpers.resourceFilePath("polaris-server-integrationtest.yml"),
-          ConfigOverride.config(
-              "server.applicationConnectors[0].port",
-              "0"), // Bind to random port to support parallelism
-          ConfigOverride.config(
-              "server.adminConnectors[0].port", "0")); // Bind to random port to support parallelism
 
-  private static String userToken;
-  private static SnowmanCredentialsExtension.SnowmanCredentials snowmanCredentials;
-  private static Path testDir;
-  private static String realm;
+  @Inject PolarisIntegrationTestHelper testHelper;
 
   @BeforeAll
-  public static void setup(
-      PolarisConnectionExtension.PolarisToken userToken,
-      SnowmanCredentialsExtension.SnowmanCredentials snowmanCredentials,
-      @PolarisRealm String polarisRealm)
-      throws IOException {
-    realm = polarisRealm;
-
-    testDir = Path.of("build/test_data/iceberg/" + realm);
-    FileUtils.deleteQuietly(testDir.toFile());
-    Files.createDirectories(testDir);
-    PolarisApplicationIntegrationTest.userToken = userToken.token();
-    PolarisApplicationIntegrationTest.snowmanCredentials = snowmanCredentials;
-
+  public void setUp(TestInfo testInfo) {
+    testHelper.setUp(testInfo);
     PrincipalRole principalRole = new PrincipalRole(PRINCIPAL_ROLE_NAME);
     try (Response createPrResponse =
-        EXT.client()
+        testHelper
+            .client
             .target(
                 String.format(
-                    "http://localhost:%d/api/management/v1/principal-roles", EXT.getLocalPort()))
+                    "http://localhost:%d/api/management/v1/principal-roles", testHelper.localPort))
             .request("application/json")
-            .header("Authorization", "Bearer " + userToken.token())
-            .header(REALM_PROPERTY_KEY, realm)
+            .header("Authorization", "Bearer " + testHelper.adminToken)
+            .header(REALM_PROPERTY_KEY, testHelper.realm)
             .post(Entity.json(principalRole))) {
       assertThat(createPrResponse)
           .returns(Response.Status.CREATED.getStatusCode(), Response::getStatus);
     }
 
     try (Response assignPrResponse =
-        EXT.client()
+        testHelper
+            .client
             .target(
                 String.format(
                     "http://localhost:%d/api/management/v1/principals/snowman/principal-roles",
-                    EXT.getLocalPort()))
+                    testHelper.localPort))
             .request("application/json")
-            .header("Authorization", "Bearer " + PolarisApplicationIntegrationTest.userToken)
-            .header(REALM_PROPERTY_KEY, realm)
+            .header("Authorization", "Bearer " + testHelper.adminToken)
+            .header(REALM_PROPERTY_KEY, testHelper.realm)
             .put(Entity.json(principalRole))) {
       assertThat(assignPrResponse)
           .returns(Response.Status.CREATED.getStatusCode(), Response::getStatus);
@@ -166,17 +134,19 @@ public class PolarisApplicationIntegrationTest {
   }
 
   @AfterAll
-  public static void deletePrincipalRole() {
-    EXT.client()
+  public void tearDown() {
+    testHelper
+        .client
         .target(
             String.format(
                 "http://localhost:%d/api/management/v1/principal-roles/%s",
-                EXT.getLocalPort(), PRINCIPAL_ROLE_NAME))
+                testHelper.localPort, PRINCIPAL_ROLE_NAME))
         .request("application/json")
-        .header("Authorization", "Bearer " + userToken)
-        .header(REALM_PROPERTY_KEY, realm)
+        .header("Authorization", "Bearer " + testHelper.adminToken)
+        .header(REALM_PROPERTY_KEY, testHelper.realm)
         .delete()
         .close();
+    testHelper.tearDown();
   }
 
   /**
@@ -186,7 +156,7 @@ public class PolarisApplicationIntegrationTest {
    * @param testInfo
    */
   @BeforeEach
-  public void before(TestInfo testInfo) {
+  public void createTestCatalog(TestInfo testInfo) {
     testInfo
         .getTestMethod()
         .ifPresent(
@@ -197,7 +167,7 @@ public class PolarisApplicationIntegrationTest {
             });
   }
 
-  private static void createCatalog(
+  private void createCatalog(
       String catalogName, Catalog.TypeEnum catalogType, String principalRoleName) {
     createCatalog(
         catalogName,
@@ -212,7 +182,7 @@ public class PolarisApplicationIntegrationTest {
         "s3://my-bucket/path/to/data");
   }
 
-  private static void createCatalog(
+  private void createCatalog(
       String catalogName,
       Catalog.TypeEnum catalogType,
       String principalRoleName,
@@ -239,39 +209,43 @@ public class PolarisApplicationIntegrationTest {
                 .setStorageConfigInfo(storageConfig)
                 .build();
     try (Response response =
-        EXT.client()
+        testHelper
+            .client
             .target(
-                String.format("http://localhost:%d/api/management/v1/catalogs", EXT.getLocalPort()))
+                String.format(
+                    "http://localhost:%d/api/management/v1/catalogs", testHelper.localPort))
             .request("application/json")
-            .header("Authorization", "Bearer " + userToken)
-            .header(REALM_PROPERTY_KEY, realm)
+            .header("Authorization", "Bearer " + testHelper.adminToken)
+            .header(REALM_PROPERTY_KEY, testHelper.realm)
             .post(Entity.json(catalog))) {
       assertThat(response).returns(Response.Status.CREATED.getStatusCode(), Response::getStatus);
     }
     try (Response response =
-        EXT.client()
+        testHelper
+            .client
             .target(
                 String.format(
                     "http://localhost:%d/api/management/v1/catalogs/%s/catalog-roles/%s",
-                    EXT.getLocalPort(),
+                    testHelper.localPort,
                     catalogName,
                     PolarisEntityConstants.getNameOfCatalogAdminRole()))
             .request("application/json")
-            .header("Authorization", "Bearer " + userToken)
-            .header(REALM_PROPERTY_KEY, realm)
+            .header("Authorization", "Bearer " + testHelper.adminToken)
+            .header(REALM_PROPERTY_KEY, testHelper.realm)
             .get()) {
       assertThat(response).returns(Response.Status.OK.getStatusCode(), Response::getStatus);
       CatalogRole catalogRole = response.readEntity(CatalogRole.class);
 
       try (Response assignResponse =
-          EXT.client()
+          testHelper
+              .client
               .target(
                   String.format(
                       "http://localhost:%d/api/management/v1/principal-roles/%s/catalog-roles/%s",
-                      EXT.getLocalPort(), principalRoleName, catalogName))
+                      testHelper.localPort, principalRoleName, catalogName))
               .request("application/json")
-              .header("Authorization", "Bearer " + userToken)
-              .header(REALM_PROPERTY_KEY, realm)
+              .header("Authorization", "Bearer " + testHelper.adminToken)
+              .header(REALM_PROPERTY_KEY, testHelper.realm)
               .put(Entity.json(catalogRole))) {
         assertThat(assignResponse)
             .returns(Response.Status.CREATED.getStatusCode(), Response::getStatus);
@@ -279,21 +253,23 @@ public class PolarisApplicationIntegrationTest {
     }
   }
 
-  private static RESTSessionCatalog newSessionCatalog(String catalog) {
+  private RESTSessionCatalog newSessionCatalog(String catalog) {
     RESTSessionCatalog sessionCatalog = new RESTSessionCatalog();
     sessionCatalog.initialize(
         "polaris_catalog_test",
         Map.of(
             "uri",
-            "http://localhost:" + EXT.getLocalPort() + "/api/catalog",
+            "http://localhost:" + testHelper.localPort + "/api/catalog",
             OAuth2Properties.CREDENTIAL,
-            snowmanCredentials.clientId() + ":" + snowmanCredentials.clientSecret(),
+            testHelper.snowmanCredentials.clientId()
+                + ":"
+                + testHelper.snowmanCredentials.clientSecret(),
             OAuth2Properties.SCOPE,
-            BasePolarisAuthenticator.PRINCIPAL_ROLE_ALL,
+            PRINCIPAL_ROLE_ALL,
             "warehouse",
             catalog,
             "header." + REALM_PROPERTY_KEY,
-            realm));
+            testHelper.realm));
     return sessionCatalog;
   }
 
@@ -482,16 +458,17 @@ public class PolarisApplicationIntegrationTest {
   }
 
   @Test
-  public void testIcebergRegisterTableInExternalCatalog(TestInfo testInfo) throws IOException {
+  public void testIcebergRegisterTableInExternalCatalog(TestInfo testInfo, @TempDir Path tempDir)
+      throws IOException {
     String catalogName = testInfo.getTestMethod().get().getName() + "External";
     createCatalog(
         catalogName,
         Catalog.TypeEnum.EXTERNAL,
         PRINCIPAL_ROLE_NAME,
         FileStorageConfigInfo.builder(StorageConfigInfo.StorageTypeEnum.FILE)
-            .setAllowedLocations(List.of("file://" + testDir.toFile().getAbsolutePath()))
+            .setAllowedLocations(List.of("file://" + tempDir.toFile().getAbsolutePath()))
             .build(),
-        "file://" + testDir.toFile().getAbsolutePath());
+        "file://" + tempDir.toFile().getAbsolutePath());
     try (RESTSessionCatalog sessionCatalog = newSessionCatalog(catalogName);
         HadoopFileIO fileIo = new HadoopFileIO(new Configuration()); ) {
       SessionCatalog.SessionContext sessionContext = SessionCatalog.SessionContext.createEmpty();
@@ -500,7 +477,7 @@ public class PolarisApplicationIntegrationTest {
       TableIdentifier tableIdentifier = TableIdentifier.of(ns, "the_table");
       String location =
           "file://"
-              + testDir.toFile().getAbsolutePath()
+              + tempDir.toFile().getAbsolutePath()
               + "/"
               + testInfo.getTestMethod().get().getName();
       String metadataLocation = location + "/metadata/000001-494949494949494949.metadata.json";
@@ -529,16 +506,17 @@ public class PolarisApplicationIntegrationTest {
   }
 
   @Test
-  public void testIcebergUpdateTableInExternalCatalog(TestInfo testInfo) throws IOException {
+  public void testIcebergUpdateTableInExternalCatalog(TestInfo testInfo, @TempDir Path tempDir)
+      throws IOException {
     String catalogName = testInfo.getTestMethod().get().getName() + "External";
     createCatalog(
         catalogName,
         Catalog.TypeEnum.EXTERNAL,
         PRINCIPAL_ROLE_NAME,
         FileStorageConfigInfo.builder(StorageConfigInfo.StorageTypeEnum.FILE)
-            .setAllowedLocations(List.of("file://" + testDir.toFile().getAbsolutePath()))
+            .setAllowedLocations(List.of("file://" + tempDir.toFile().getAbsolutePath()))
             .build(),
-        "file://" + testDir.toFile().getAbsolutePath());
+        "file://" + tempDir.toFile().getAbsolutePath());
     try (RESTSessionCatalog sessionCatalog = newSessionCatalog(catalogName);
         HadoopFileIO fileIo = new HadoopFileIO(new Configuration()); ) {
       SessionCatalog.SessionContext sessionContext = SessionCatalog.SessionContext.createEmpty();
@@ -547,7 +525,7 @@ public class PolarisApplicationIntegrationTest {
       TableIdentifier tableIdentifier = TableIdentifier.of(ns, "the_table");
       String location =
           "file://"
-              + testDir.toFile().getAbsolutePath()
+              + tempDir.toFile().getAbsolutePath()
               + "/"
               + testInfo.getTestMethod().get().getName();
       String metadataLocation = location + "/metadata/000001-494949494949494949.metadata.json";
@@ -582,16 +560,17 @@ public class PolarisApplicationIntegrationTest {
   }
 
   @Test
-  public void testIcebergDropTableInExternalCatalog(TestInfo testInfo) throws IOException {
+  public void testIcebergDropTableInExternalCatalog(TestInfo testInfo, @TempDir Path tempDir)
+      throws IOException {
     String catalogName = testInfo.getTestMethod().get().getName() + "External";
     createCatalog(
         catalogName,
         Catalog.TypeEnum.EXTERNAL,
         PRINCIPAL_ROLE_NAME,
         FileStorageConfigInfo.builder(StorageConfigInfo.StorageTypeEnum.FILE)
-            .setAllowedLocations(List.of("file://" + testDir.toFile().getAbsolutePath()))
+            .setAllowedLocations(List.of("file://" + tempDir.toFile().getAbsolutePath()))
             .build(),
-        "file://" + testDir.toFile().getAbsolutePath());
+        "file://" + tempDir.toFile().getAbsolutePath());
     try (RESTSessionCatalog sessionCatalog = newSessionCatalog(catalogName);
         HadoopFileIO fileIo = new HadoopFileIO(new Configuration()); ) {
       SessionCatalog.SessionContext sessionContext = SessionCatalog.SessionContext.createEmpty();
@@ -600,7 +579,7 @@ public class PolarisApplicationIntegrationTest {
       TableIdentifier tableIdentifier = TableIdentifier.of(ns, "the_table");
       String location =
           "file://"
-              + testDir.toFile().getAbsolutePath()
+              + tempDir.toFile().getAbsolutePath()
               + "/"
               + testInfo.getTestMethod().get().getName();
       String metadataLocation = location + "/metadata/000001-494949494949494949.metadata.json";
@@ -637,15 +616,17 @@ public class PolarisApplicationIntegrationTest {
                       "polaris_catalog_test",
                       Map.of(
                           "uri",
-                          "http://localhost:" + EXT.getLocalPort() + "/api/catalog",
+                          "http://localhost:" + testHelper.localPort + "/api/catalog",
                           OAuth2Properties.CREDENTIAL,
-                          snowmanCredentials.clientId() + ":" + snowmanCredentials.clientSecret(),
+                          testHelper.snowmanCredentials.clientId()
+                              + ":"
+                              + testHelper.snowmanCredentials.clientSecret(),
                           OAuth2Properties.SCOPE,
-                          BasePolarisAuthenticator.PRINCIPAL_ROLE_ALL,
+                          PRINCIPAL_ROLE_ALL,
                           "warehouse",
                           emptyEnvironmentVariable,
                           "header." + REALM_PROPERTY_KEY,
-                          realm)))
+                          testHelper.realm)))
           .isInstanceOf(BadRequestException.class)
           .hasMessage("Malformed request: Please specify a warehouse");
     }
@@ -654,10 +635,11 @@ public class PolarisApplicationIntegrationTest {
   @Test
   public void testRequestHeaderTooLarge() {
     Invocation.Builder request =
-        EXT.client()
+        testHelper
+            .client
             .target(
                 String.format(
-                    "http://localhost:%d/api/management/v1/principal-roles", EXT.getLocalPort()))
+                    "http://localhost:%d/api/management/v1/principal-roles", testHelper.localPort))
             .request("application/json");
 
     // The default limit is 8KiB and each of these headers is at least 8 bytes, so 1500 definitely
@@ -669,8 +651,8 @@ public class PolarisApplicationIntegrationTest {
     try {
       try (Response response =
           request
-              .header("Authorization", "Bearer " + userToken)
-              .header(REALM_PROPERTY_KEY, realm)
+              .header("Authorization", "Bearer " + testHelper.adminToken)
+              .header(REALM_PROPERTY_KEY, testHelper.realm)
               .post(Entity.json(new PrincipalRole("r")))) {
         assertThat(response)
             .returns(
@@ -690,54 +672,52 @@ public class PolarisApplicationIntegrationTest {
     Entity<PrincipalRole> largeRequest = Entity.json(new PrincipalRole("r".repeat(1000001)));
 
     try (Response response =
-        EXT.client()
+        testHelper
+            .client
             .target(
                 String.format(
-                    "http://localhost:%d/api/management/v1/principal-roles", EXT.getLocalPort()))
+                    "http://localhost:%d/api/management/v1/principal-roles", testHelper.localPort))
             .request("application/json")
-            .header("Authorization", "Bearer " + userToken)
-            .header(REALM_PROPERTY_KEY, realm)
+            .header("Authorization", "Bearer " + testHelper.adminToken)
+            .header(REALM_PROPERTY_KEY, testHelper.realm)
             .post(largeRequest)) {
       assertThat(response)
-          .returns(Response.Status.BAD_REQUEST.getStatusCode(), Response::getStatus)
-          .matches(
-              r ->
-                  r.readEntity(RequestThrottlingErrorResponse.class)
-                      .errorType()
-                      .equals(REQUEST_TOO_LARGE));
+          .returns(Response.Status.REQUEST_ENTITY_TOO_LARGE.getStatusCode(), Response::getStatus);
     }
   }
 
   @Test
   public void testRefreshToken() throws IOException {
     String path =
-        String.format("http://localhost:%d/api/catalog/v1/oauth/tokens", EXT.getLocalPort());
+        String.format("http://localhost:%d/api/catalog/v1/oauth/tokens", testHelper.localPort);
     try (RESTClient client =
-        HTTPClient.builder(ImmutableMap.of())
-            .withHeader(REALM_PROPERTY_KEY, realm)
+        HTTPClient.builder(Map.of())
+            .withHeader(REALM_PROPERTY_KEY, testHelper.realm)
             .uri(path)
             .build()) {
       String credentialString =
-          snowmanCredentials.clientId() + ":" + snowmanCredentials.clientSecret();
-      var authConfig =
-          AuthConfig.builder().credential(credentialString).scope("PRINCIPAL_ROLE:ALL").build();
-      ImmutableAuthConfig configSpy = spy(authConfig);
-      when(configSpy.expiresAtMillis()).thenReturn(0L);
-      assertThat(configSpy.expiresAtMillis()).isEqualTo(0L);
-      when(configSpy.oauth2ServerUri()).thenReturn(path);
+          testHelper.snowmanCredentials.clientId()
+              + ":"
+              + testHelper.snowmanCredentials.clientSecret();
+      AuthConfig configMock = mock(AuthConfig.class);
+      when(configMock.credential()).thenReturn(credentialString);
+      when(configMock.scope()).thenReturn(PRINCIPAL_ROLE_ALL);
+      when(configMock.expiresAtMillis()).thenReturn(0L);
+      when(configMock.oauth2ServerUri()).thenReturn(path);
 
-      var parentSession = new OAuth2Util.AuthSession(Map.of(), configSpy);
+      var parentSession = new OAuth2Util.AuthSession(Map.of(), configMock);
       var session =
-          OAuth2Util.AuthSession.fromAccessToken(client, null, userToken, 0L, parentSession);
+          OAuth2Util.AuthSession.fromAccessToken(
+              client, null, testHelper.adminToken, 0L, parentSession);
 
       OAuth2Util.AuthSession sessionSpy = spy(session);
       when(sessionSpy.expiresAtMillis()).thenReturn(0L);
       assertThat(sessionSpy.expiresAtMillis()).isEqualTo(0L);
-      assertThat(sessionSpy.token()).isEqualTo(userToken);
+      assertThat(sessionSpy.token()).isEqualTo(testHelper.adminToken);
 
       sessionSpy.refresh(client);
       assertThat(sessionSpy.credential()).isNotNull();
-      assertThat(sessionSpy.credential()).isNotEqualTo(userToken);
+      assertThat(sessionSpy.credential()).isNotEqualTo(testHelper.adminToken);
     }
   }
 }
